--- a/DA_IH Workspace/LABS/Unit 4/Midterm project/Midterm project.ipynb
+++ b/DA_IH Workspace/LABS/Unit 4/Midterm project/Midterm project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b872bda1",
+   "id": "855f4817",
    "metadata": {},
    "source": [
     "# Midterm project Ironhack Bootcamp"
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaf34587",
+   "id": "8539b8a6",
    "metadata": {},
    "source": [
     "## Content\n",
     "\n",
-    "This is a data analytics project focusing on business intelligence (BI). The dataset used is a Brazilian ecommerce public dataset of orders made at Olist Store, the largest department store in the Brazilian marketplace. The dataset structure can be seen below."
+    "This is a data analytics project focusing on business intelligence (BI). The dataset used is a Brazilian ecommerce public dataset of orders made at Olist Store, the largest department store in the Brazilian marketplace. It contains information of 100,000 orders made between 2016 to 2018 Brazil-wide.The dataset structure can be seen below."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f84357c7",
+   "id": "de962146",
    "metadata": {},
    "source": [
     "<div>\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718426b6",
+   "id": "d550f450",
    "metadata": {},
    "source": [
     "## The objective\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c144d43",
+   "id": "da44ed11",
    "metadata": {},
    "source": [
     "## Workflow"
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9122afde",
+   "id": "00df4ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47fe91ac",
+   "id": "c4cd41db",
    "metadata": {},
    "outputs": [],
    "source": [
