midterm project deliverables

--- a/DA_IH Workspace/LABS/Unit 4/Midterm project/Midterm project.ipynb
+++ b/DA_IH Workspace/LABS/Unit 4/Midterm project/Midterm project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "855f4817",
+   "id": "0de6cc42",
    "metadata": {},
    "source": [
     "# Midterm project Ironhack Bootcamp"
@@ -10,17 +10,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8539b8a6",
+   "id": "80196b82",
    "metadata": {},
    "source": [
-    "## Content\n",
+    "## Table of contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90deefca",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
     "\n",
     "This is a data analytics project focusing on business intelligence (BI). The dataset used is a Brazilian ecommerce public dataset of orders made at Olist Store, the largest department store in the Brazilian marketplace. It contains information of 100,000 orders made between 2016 to 2018 Brazil-wide.The dataset structure can be seen below."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de962146",
+   "id": "143bfd98",
    "metadata": {},
    "source": [
     "<div>\n",
@@ -30,25 +38,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d550f450",
+   "id": "3c9e367f",
    "metadata": {},
    "source": [
-    "## The objective\n",
-    "\n"
+    "## Business problem statement\n",
+    "\n",
+    "Olist has completely changed its top management and would like to get the following deliverables:\n",
+    "\n",
+    "* definition of KPIs and providing with insights\n",
+    "* the most recent overview of sales performance and marketing analytics\n",
+    "* to increase profits, improve order processing time and shipping procedure, sustain good customer satisfaction levels, as well as positively influence the environment, the Olist management needs a CSR - strategy\n",
+    "* advice on how to improve sales and marketing funnels\n",
+    "* deliver further information that would help Olist become a leader in the e-commerce market"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "da44ed11",
+   "id": "8d15674a",
    "metadata": {},
    "source": [
-    "## Workflow"
+    "## Workflow\n",
+    "\n",
+    "* data gathering\n",
+    "* data cleaning\n",
+    "* first EDA and defining KPIs\n",
+    "* outline dashboards\n",
+    "* data visualisation in Tableau\n",
+    "* interpreting the results\n",
+    "* presentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74c8c388",
+   "metadata": {},
+   "source": [
+    "## Tools\n",
+    "\n",
+    "* Python \n",
+    "* SQL\n",
+    "* Tableau\n",
+    "\n",
+    "* Libraries used (pandas, scikit-learn...)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00df4ee1",
+   "id": "269b9313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4cd41db",
+   "id": "3cac645a",
    "metadata": {},
    "outputs": [],
    "source": [
